--- a/API_Service/requirements.txt
+++ b/API_Service/requirements.txt
@@ -1,14 +1,30 @@
 aniso8601==9.0.1
+azure-core==1.29.5
+azure-identity==1.15.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
 click==8.0.1
+cryptography==41.0.5
 Flask==2.0.1
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.1
+idna==3.6
 itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+msal==1.25.0
+msal-extensions==1.0.0
+portalocker==2.8.2
+pycparser==2.21
+PyJWT==2.8.0
+pyodbc==4.0.34
 pytz==2023.3.post1
+requests==2.31.0
 six==1.16.0
 SQLAlchemy==1.4.23
+typing_extensions==4.8.0
+urllib3==2.1.0
 Werkzeug==2.0.1
 WTForms==3.1.1
