work on Account creation (#21) Worked on webpage (#21 & #15) chang /API_Service/app.py to api.py to fix a deployment issue on server added bcrypt library (#21) updated ORM to reflect some db updates worked on finding account type after login (#22)

--- a/API_Service/api.hartzlerhome.solutions.conf
+++ b/API_Service/api.hartzlerhome.solutions.conf
@@ -2,13 +2,13 @@
         ServerName  api.hartzlerhome.solutions
         ServerAlias www.api.hartzlerhome.solutions
         ServerAdmin trevin@hartzler.email
-        DocumentRoot /var/www/HomeEasy-API
+        DocumentRoot /var/www/HomeEasyAPI
 
-        WSGIDaemonProcess HomeEasyAPI threads=5 python-path=/var/www/HomeEasy-API:var/www/HomeEasy-API/env/lib/python3.8/site-packages
-        WSGIScriptAlias / /var/www/HomeEasy-API/HomeEasyAPI.wsgi
+        WSGIDaemonProcess HomeEasyAPI threads=5 python-path=/var/www/HomeEasyAPI:var/www/HomeEasyAPI/env/lib/python3.8/site-packages
+        WSGIScriptAlias / /var/www/HomeEasyAPI/HomeEasyAPI.wsgi
         WSGIApplicationGroup %{GLOBAL}
-        <Directory HomeEasy-API>
-             WSGIProcessGroup HomeEasy-API
+        <Directory HomeEasyAPI>
+             WSGIProcessGroup HomeEasyAPI
              WSGIApplicationGroup %{GLOBAL}
              Options Indexes FollowSymLinks Includes ExecCGI
              AllowOverride All
