--- a/API_Service/requirements.txt
+++ b/API_Service/requirements.txt
@@ -1,6 +1,7 @@
 aniso8601==9.0.1
 azure-core==1.29.5
 azure-identity==1.15.0
+bcrypt==4.1.1
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
