--- a/API_Service/api.hartzlerhome.solutions.conf
+++ b/API_Service/api.hartzlerhome.solutions.conf
@@ -16,6 +16,10 @@
              Allow from all
         </Directory>
 
+        <ifModule mod_headers.c>
+            Header set Access-Control-Allow-Origin: *
+        </ifModule>
+
         ErrorLog ${APACHE_LOG_DIR}/flaskapp-error.log
         CustomLog ${APACHE_LOG_DIR}/flaskapp-access.log combined
 </VirtualHost>
