--- a/API_Service/api.hartzlerhome.solutions.conf
+++ b/API_Service/api.hartzlerhome.solutions.conf
@@ -18,6 +18,7 @@
 
         <ifModule mod_headers.c>
             Header set Access-Control-Allow-Origin: *
+            Header set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept"
         </ifModule>
 
         ErrorLog ${APACHE_LOG_DIR}/flaskapp-error.log
